FIX: se agrega funcionalidad al boton mobile comprar de tickets.html

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1141,16 +1141,6 @@ html {
   margin-bottom: 2rem;
 }
 
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
 .mb-1{
   margin-bottom: 0.25rem;
 }
@@ -1207,20 +1197,12 @@ html {
   margin-top: 0.75rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
 .mt-4{
   margin-top: 1rem;
 }
 
-.mt-7{
-  margin-top: 1.75rem;
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .block{
@@ -1267,20 +1249,16 @@ html {
   height: 2rem;
 }
 
+.h-\[100px\]{
+  height: 100px;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-screen{
   height: 100vh;
-}
-
-.h-28{
-  height: 7rem;
-}
-
-.h-\[100px\]{
-  height: 100px;
 }
 
 .max-h-\[100px\]{
@@ -1293,18 +1271,6 @@ html {
 
 .max-h-screen{
   max-height: 100vh;
-}
-
-.max-h-\[48px\]{
-  max-height: 48px;
-}
-
-.max-h-\[28px\]{
-  max-height: 28px;
-}
-
-.max-h-\[58px\]{
-  max-height: 58px;
 }
 
 .w-1\/2{
@@ -1359,6 +1325,10 @@ html {
   width: 80%;
 }
 
+.w-\[90px\]{
+  width: 90px;
+}
+
 .w-full{
   width: 100%;
 }
@@ -1366,14 +1336,6 @@ html {
 .w-max{
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-24{
-  width: 6rem;
-}
-
-.w-\[90px\]{
-  width: 90px;
 }
 
 .min-w-\[100px\]{
@@ -1607,16 +1569,17 @@ html {
   border-top-width: 0.5px;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
 .border-solid{
   border-style: solid;
 }
 
 .border-dashed{
   border-style: dashed;
+}
+
+.border-\[\#4441e7\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(68 65 231 / var(--tw-border-opacity));
 }
 
 .border-gray-300{
@@ -1627,6 +1590,10 @@ html {
 .border-navy-100{
   --tw-border-opacity: 1;
   border-color: rgb(17 50 111 / var(--tw-border-opacity));
+}
+
+.border-navy-100\/70{
+  border-color: rgb(17 50 111 / 0.7);
 }
 
 .border-navy-150{
@@ -1658,19 +1625,6 @@ html {
 
 .border-white\/20{
   border-color: rgb(255 255 255 / 0.2);
-}
-
-.border-\[\#4441e7\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(68 65 231 / var(--tw-border-opacity));
-}
-
-.border-navy-100\/50{
-  border-color: rgb(17 50 111 / 0.5);
-}
-
-.border-navy-100\/70{
-  border-color: rgb(17 50 111 / 0.7);
 }
 
 .border-x-transparent{
@@ -1891,8 +1845,9 @@ html {
   padding: 2rem;
 }
 
-.p-7{
-  padding: 1.75rem;
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-2{
@@ -1940,17 +1895,16 @@ html {
   padding-bottom: 1.25rem;
 }
 
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .pb-10{
   padding-bottom: 2.5rem;
 }
 
 .pb-28{
   padding-bottom: 7rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .pb-4{
@@ -1975,18 +1929,6 @@ html {
 
 .pt-52{
   padding-top: 13rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
-.pb-3{
-  padding-bottom: 0.75rem;
-}
-
-.pl-6{
-  padding-left: 1.5rem;
 }
 
 .text-center{
@@ -2055,10 +1997,6 @@ html {
 
 .font-semibold{
   font-weight: 600;
-}
-
-.uppercase{
-  text-transform: uppercase;
 }
 
 .leading-3{
@@ -2150,18 +2088,6 @@ html {
 
 .decoration-white{
   text-decoration-color: #fff;
-}
-
-.decoration-pink-500{
-  text-decoration-color: #ec4899;
-}
-
-.decoration-solid{
-  text-decoration-style: solid;
-}
-
-.opacity-0{
-  opacity: 0;
 }
 
 .shadow-sm{
@@ -2512,10 +2438,6 @@ html {
     position: absolute;
   }
 
-  .md\:block{
-    display: block;
-  }
-
   .md\:flex{
     display: flex;
   }
@@ -2526,10 +2448,6 @@ html {
 
   .md\:h-screen{
     height: 100vh;
-  }
-
-  .md\:max-h-full{
-    max-height: 100%;
   }
 
   .md\:w-1\/3{
@@ -2581,14 +2499,14 @@ html {
     padding-top: 1.25rem;
   }
 
-  .md\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:text-base{
